<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity"
    android:layout_margin="10sp">

    <View
        android:id="@+id/hr1"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"/>
    
    <TextView
        android:id="@+id/textTA"
        android:layout_below="@+id/hr1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tentang Aplikasi"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/textITA"
        android:layout_below="@+id/textTA"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textColor="@android:color/black"/>

    <View
        android:id="@+id/hr2"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textITA"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/textTeam"
        android:layout_below="@+id/hr2"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Team"
        android:textSize="20dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/textITeam"
        android:layout_below="@+id/textTeam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team"
        android:textColor="@android:color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="10dp"/>

</RelativeLayout>