<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailPristiwaActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/topBar"
        android:layout_marginBottom="10dp"
        android:background="@drawable/topbar_peristiwa">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Peristiwa"
            android:textSize="50sp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:fontFamily="@font/capriola"
            android:layout_centerVertical="true"/>

    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <RelativeLayout
                android:id="@+id/match1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/txt_nama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Nama"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/architects_daughter"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:id="@+id/txt_update"
                    android:layout_below="@+id/txt_nama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Update"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/architects_daughter"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:layout_centerHorizontal="true"/>
                <androidx.cardview.widget.CardView
                    android:id="@+id/crdImg"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_below="@+id/txt_update">
                    <ImageView
                        android:id="@+id/fotoView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"/>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <RelativeLayout
                    android:id="@+id/match2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/match1">
                    <TextView
                        android:id="@+id/txtTanggal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="TGL Peristiwa : "
                        android:textColor="@android:color/black"/>
                    <TextView
                        android:id="@+id/txt_tanggal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Tanggal"
                        android:layout_toRightOf="@+id/txtTanggal"
                        android:textSize="20sp"
                        android:textColor="@android:color/black"/>
                </RelativeLayout>
                <TextView
                    android:layout_below="@+id/match2"
                    android:layout_marginTop="10dp"
                    android:id="@+id/txt_deskripsi"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/Deskripsi"
                    android:textSize="20sp"
                    android:textColor="@android:color/black">
                </TextView>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>